<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAC1A7"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#ECE3CB"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="#4CAF50" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="290dp"
            android:layout_height="150dp"
            android:layout_marginLeft="57dp"
            android:layout_marginTop="48dp"
            android:scrollbarSize="4dp"
            app:srcCompat="@drawable/money" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/idSalario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:ems="10"
            android:hint="@string/idSalario"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/idHorasExtras"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:ems="10"
            android:hint="@string/idHorasExtras"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:text="@string/idBonificaciones"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="111dp"
            android:layout_marginStart="50dp">

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Opcion0" />

            <RadioButton
                android:id="@+id/radioButtonSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Opcion1" />

        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:background="#FFC107"
            android:backgroundTint="#FFC107"
            android:onClick="CalcularSalario"
            android:text="@string/Boton"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textViewResul"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/Resultado"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="86dp"
            android:height="30dp"
            android:background="#4CAF50" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>